--- a/adv.accordion.css
+++ b/adv.accordion.css
@@ -1,23 +1,14 @@
-.accordionRoot, [data-accordion] {
+/* .adv-accordion:not(.no-transition) *, */
+.adv-accordion:not(.no-transition) .accordionRoot{
+	-webkit-transition: height .5s;
 	transition: height .5s;
 }
 
 [data-accordion='header']{
-	background-color: #d00d04;
-	
-	height:50px;
 	padding: 0 5px;
 }
-[data-accordion='content']{
-	background-color: fuchsia;
-	
-	overflow: scroll;
-	position: relative;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: calc(100% - 50px);
-	width: 100%;
+[data-accordion='content']{	
 	overflow: auto;
+	width: 100%;
+	
 }
